--- a/src/LongManagerClient/MainWindow.xaml
+++ b/src/LongManagerClient/MainWindow.xaml
@@ -30,7 +30,7 @@
         </Menu>
         <DockPanel DockPanel.Dock="Bottom" Width="auto" Height="40" Background="LightGray">
             <WrapPanel x:Name="SystemPanel" VerticalAlignment="Center">
-                <TextBlock Foreground="Black" Margin="20 0 0 0" x:Name="TxtDate"/>
+                <TextBlock Foreground="Green" Margin="20 0 0 0" x:Name="TxtDate"/>
                 <TextBlock Foreground="Black" Margin="20 0 0 0" Text="用户账号："></TextBlock>
                 <TextBlock Foreground="Black" Text="{Binding UserName}"></TextBlock>
                 <TextBlock Foreground="Black" Margin="20 0 0 0" Text="用户名称："></TextBlock>
